fix: ensure toolbar elements do not overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,7 +39,7 @@
   justify-content: space-between;
   margin-bottom: 1em;
   min-height: 2.7em;
-  padding: 0.5em 0.5em 0.5em 1em;
+  padding: 0.5em 1em;
   position: relative;
 
   p {
@@ -55,6 +55,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5em;
+    max-width: 100%;
   }
 
   button {
@@ -66,6 +67,9 @@
     font-size: 1em;
     font-weight: 700;
     line-height: 1.2;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding: 0.75em 1.25em;
     white-space: nowrap;
 
@@ -131,7 +135,7 @@
       }
 
       &.disabled {
-        &::after, 
+        &::after,
         &::before {
           color: grey;
         }
